--- a/config-example.json
+++ b/config-example.json
@@ -1,9 +1,4 @@
 {
   "token": "tg token",
-  "chatId": 0,
-  "mongodb": {
-    "host": "localhost",
-    "port": 27017,
-    "database": "support-bot"
-  }
+  "chatId": 0
 }
